--- a/simple-app/templates/deployment.yaml
+++ b/simple-app/templates/deployment.yaml
@@ -20,8 +20,8 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          image: "{{ .Values.imageProp.repository }}:{{ .Values.imageProp.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.imageProp.pullPolicy }}
           env:
           - name: HELLO_MSG
             value: {{ .Values.env.hello_msg }}
